Revision history for Perl extension Catalyst::Plugin::Static::Simple

0.30   2012-05-04 17:05:00
        - Add Cache-Control:public header
        - Optionally provide Expires header
        - Change configuration key to 'Plugin::Static::Simple' by default.
          The old 'static' key is still supported, but issues a warning.

0.29   2010-02-01 18:45:00
        - Switch from override to around, because really, wtf

0.28   2010-01-04 13:15:00
        - Fix issues in debug mode. (RT#53338)

0.27   2010-01-03 14:49:00
        - Switch to being a Moose role, removing dependencies on
          Class::Data::Inheritable and Class::Accessor (Andrey Kostenko in
          RT#51089)
        - Make Pod tests mandatory for authors but never run otherwise
        - Switch to Test::NoTabs to ensure no tabs, rather than
          Test::Perl::Critic

0.26   2009-12-06 12:30:00
        - Fix Pod to show less nasty method of assigning config by calling
          the config method with parameters, rather than poking around inside
          the hash.
        - Require newer (>= 0.15) Catalyst::Plugin::SubRequest for subrequest
          tests as old versions don't work with new Catalyst (>= 5.80014)

0.25   2009-10-22 21:40:00 BST
        - Fix bug where old unrelated $@ values would result in an error.

0.24   2009-10-18 19:10:00 BST
        - Fixup copyright information

0.23   2009-10-06 17:40:39
        - Move actions out of TestApp into a Root controller as
          this is now deprecated.

0.22    2009-08-21 18:14:59
        - Add tests for delivering empty files.
        - Fix those tests by depending on Catalyst-Runtime 5.80008.
        - Throw away compatibility code for older catalyst versions.
        - Fix docs to not include plugins in call to ->setup() (t0m)

0.21    2009-03-29 20:31:49
		- Documentation improvements (jester)
        - Change from NEXT to MRO::Compat - RT#40628, RT#44553 (ilmari)
        - Bump prereq to MIME::Types to 1.25 to correctly send files